# SimpleMulitplayerC-Game

./: .gitignore  CMakeLists.txt  LICENSE
include/core/: IScene.hpp
include/engine/: IInput.hpp  IRenderer.hpp  IScene.hpp  InputAction.hpp  Signature.hpp
include/engine/core/: Types.hpp
include/engine/exceptions/: ComponentException.hpp
include/engine/input/: IInput.hpp
include/engine/render/: IRenderer.hpp
include/engine/scene/: IScene.hpp
include/game/config/: GameConfig.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Application.hpp  CMakeLists.txt  SceneManager.hpp
src/engine/: CMakeLists.txt
src/engine/core/: Application.cpp  Application.hpp  Clock.cpp  Clock.hpp  SceneManager.cpp  SceneManager.hpp
src/engine/ecs/: ComponentArray.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  World.cpp  World.hpp
src/engine/input/: InputManager.cpp  InputManager.hpp
src/engine/render/: Renderer.cpp  Renderer.hpp
src/game/: CMakeLists.txt
src/game/components/: Acceleration.hpp  Collider.hpp  PlayerController.hpp  Sprite.hpp  Transform.hpp  Velocity.hpp
src/game/entities/: EntityFactory.cpp  EntityFactory.hpp
src/game/entities/factory/: EntityFactory.cpp  EntityFactory.hpp
src/game/scenes/factory/: SceneFactory.cpp  SceneFactory.hpp
src/game/scenes/test_scene/: TestScene.cpp  TestScene.hpp
src/game/systems/: System.hpp
src/game/systems/gameplay/: CollisionSystem.cpp  CollisionSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
src/game/systems/render/: RenderSystem.cpp  RenderSystem.hpp
src/game/systems/rendering/: RenderSystem.cpp  RenderSystem.hpp
src/scenes/: CMakeLists.txt
src/scenes/test_scene/: TestScene.cpp  TestScene.hpp
